[tool.poetry]
name = "agent-sample"
version = "0.1.0"
description = "A minimal agent on Atrium"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.9"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
